objects/EZ2__c.object
<CustomObject>
    <fields>
        <fullName>EZ2__c</fullName>
        <label>EZ2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZ3__c</fullName>
        <label>EZ3</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZ4__c</fullName>
        <label>EZ4</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>EZ</label>
        <referenceTo>EZ__c</referenceTo>
        <relationshipLabel>EZ2</relationshipLabel>
        <relationshipName>EZ2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>EZ2</label>
    <nameField>
        <label>EZ2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZ2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>